# lqpl

./: .alias.sh  .gitignore  .rubocop.yml  .ruby-gemset  .ruby-version  .tm_properties  BUILDING  Dockerfile  Gemfile  Guardfile  LICENCE  LICENSE  README  README.md  README.testing  README.testing.md  Rakefile  TODO.txt  build.xml  build_configuration.rb  cabal.sandbox.config  dripmain.rb  generated_build.xml  lqpl-spec.cabal  lqpl.cabal  lqpl_gui.properties  notesOnConvertingToFest.txt  package.yaml  qface.properties  qface.xml  quantumFace.tmproj  runQface.rb  stack.yaml
Compiler/: BUILDING  lqpl-compiler.cabal  lqpl.cabal  package.yaml
Compiler/lib/Lqpl/Compiler/: BaseTypes.lhs  CompSupport.lhs  Compiler.lhs  GenCode.lhs  GenerationErrors.lhs  InstructionNames.lhs  Instructions.lhs  IrTypes.lhs  Opts.lhs  QPLParser.lhs  Qtypes.lhs  SemTypes.lhs  Semantic.lhs  SemanticErrors.lhs  SymbolTable.lhs  SymbolTableGlobals.lhs  TypeUnification.lhs  UnificationErrors.lhs
Compiler/src/Compiler/: CompSupport.lhs  Compiler.lhs  CompilerServer.lhs  GenCode.lhs  GenerationErrors.lhs  InstructionNames.lhs  Instructions.lhs  IrTypes.lhs  Main.lhs  Opts.lhs  ParseLexMonad.lhs  QPLParser.lhs  Qtypes.lhs  SemTypes.lhs  Semantic.lhs  SemanticErrors.lhs  ServerMain.lhs  SymbolTable.lhs  SymbolTableGlobals.lhs  TypeUnification.lhs  UnificationErrors.lhs
Compiler/src/Lqpl/Compiler/: Main.lhs
Compiler/src/Spec/Compiler/: CompilerServerConnectSpec.lhs  CompilerServerSpec.lhs  QPLParserSpec.lhs  TypeUnificationSpec.lhs
Compiler/src/Spec/Utility/: FileProviderSpec.lhs
Compiler/src/Utility/: FileProvider.lhs
Compiler/src/Utility/FileProvider/: FileSystem.lhs
Emulator/: Setup.hs  lqpl-emulator.cabal  lqplemulator.cabal  package.yaml
Emulator/lib/Lqpl/Assembler/: AssemLexer.x  AssemParser.ly  LexMonad.lhs
Emulator/lib/Lqpl/Data/: .#Stream.lhs  ClassComp.lhs  ClassicalData.lhs  EitherLocal.lhs  InfList.lhs  LazyNum.lhs  Matrix.lhs  Permutation.lhs  Stream.lhs
Emulator/lib/Lqpl/QSM/: BasicData.lhs  MachineErrors.lhs  QSM.lhs  Simulate.lhs  Transformations.lhs
Emulator/lib/Lqpl/Server/: EmulatorServerCommand.lhs  MachineControl.lhs  Server.lhs  StackToJSON.lhs  Types.lhs
Emulator/src/Assembler/: AssemLexer.x  AssemParser.ly  LexMonad.lhs
Emulator/src/Data/: Basis.lhs  ClassComp.lhs  ClassicalData.lhs  EitherLocal.lhs  InfList.lhs  LazyNum.lhs  Matrix.lhs  Permutation.lhs  Stream.lhs
Emulator/src/Data/Computation/: BaseType.CompDouble.lhs  BaseType.LazyNum.lhs  BaseType.lhs
Emulator/src/Emulator/: crashSpotOnRecursion.txt
Emulator/src/Emulator/Dialogs/: VersionMismatch.lhs
Emulator/src/Lqpl/: EmulatorServer.lhs
Emulator/src/QSM/: BasicData.lhs  QSM.lhs  QSPretty.lhs  Simulate.lhs  Transformations.lhs
Emulator/src/QSM/Components/: ControlStack.lhs  Instructions.lhs  MemoryMap.lhs
Emulator/src/QSM/QuantumStack/: QSDefinition.lhs  QSManipulation.lhs  QSRotation.lhs  QSTransforms.lhs  QSViewQueries.lhs  QSXML.lhs
Emulator/src/QServer/: EmulatorServerCommand.lhs  MachineControl.lhs  ParseServerCommand.lhs  QServer.lhs  StackToJSON.lhs  StackToXML.lhs  Types.lhs
Emulator/src/Spec/QServer/: CodeToXMLSpec.lhs  MMapToXMLSpec.lhs  ParseServerCommandSpec.lhs  StackToXMLSpec.lhs
Emulator/src/Tests/: StackFunctions.lhs
Emulator/src/Tests/Data/: TestLazyNum.lhs
distribution/: BUILDING  LICENSE  lqpl.cabal  lqpl.tmproj
distribution/doc/: body.tex  latexMacros.tex  lqpl.sty  lqplbib.bib  notesOnLayouts.txt  secExamplesArithmetic.tex  secExamplesHiddenSubgroup.tex  secIntroStackMachine.tex  secLQPLStatements.tex  secMachineImplementation.tex  secOrderFinding.tex  secRunningCompiler.tex  secRunningEmulator.tex  secTranslationToQSMCode.tex
distribution/doc/examplecode/: LengthList.qpl  append.qpl  badicecream.qpl  coin.generated  dataCreationUnbalanced.qpl  dj.qpl  examplefc.qpl  flattenTree.qpl  initList.qpl  measureInps.qpl  prependnzeros.qpl  qft.qpl  treeEx.qpl  treeMaxDepth.explicit.frag.qpl  treeMaxDepth.frag.qpl
distribution/doc/examplecode/TreeElection/: demoFourLin.qpo  demoFourUnbalanced.qpo  demoTwoNodes.qpl  demoTwoNodes.qpo
distribution/doc/examplecode/arithmetic/: intToQubitList.qpl  testDestCarry.qpl  testcs.qpl
distribution/doc/examplecode/compilerTests/: testSplit.qpl
distribution/doc/examplecode/grover/: gtrans.qpl  phase.qpl
distribution/doc/examplecode/orderfind/: inverseRotate.qpl
distribution/doc/examplecode/quintmod/: ListFunctions.qpl  ModFunctions.qpl  powerSupport.qpl  smartConstructor.qpl
distribution/doc/images/: entangledQubits.eps  integer.ppm  listExample.eps  listExample.ppm  treeExample.eps  treeExampleInQS.eps  treeExampleInQS.ppm
distribution/lqplcode/: append.qpl  dataCreationExample1.qpl  intToQubitList.qpl  leader.qpl  leader4.qpl  leaderNEList.qpl  reversetwice.qpl  teleport.qpl
distribution/lqplcode/TreeElection/: demoThreeBalanced.qpl
distribution/lqplcode/arithmetic/: adder.qpl  destCarry.qpl  testAdderk.qpl  testadd1.qpl
distribution/lqplcode/orderfind/: ListUtils.qpl  OrderFind.qpl  Utils.qpl
distribution/src/Assembler/: AssemLexer.x  InstructionNames.lhs  LexMonad.lhs
distribution/src/Compiler/: BaseTypes.lhs  CompSupport.lhs  Compiler.lhs  CompilerServer.lhs  GenCode.lhs  InstructionNames.lhs  Instructions.lhs  IrTypes.lhs  Main.exe.manifest  Main.lhs  Makefile  Opts.lhs  QPLParser.lhs  Qlexer.x  Qparser.ly  SemTypes.lhs  Semantic.lhs  SemanticErrors.lhs  ServerMain.lhs  SymbolTable.lhs  SymbolTableGlobals.lhs  TypeUnification.lhs  qc.cabal
distribution/src/Data/: Basis.lhs  ClassComp.lhs  EitherLocal.lhs  Matrix.lhs  Stack.lhs
distribution/src/Emulator/: QstackGTK.lhs
distribution/src/QSM/: BasicData.lhs  MachineErrors.lhs  QSM.lhs  Transformations.lhs
distribution/src/QServer/: MachineControl.lhs  ParseServerCommand.lhs  QServer.lhs  StackToXML.lhs  Types.lhs
distribution/src/Spec/: SpecHelper.lhs
distribution/src/Tests/: RunTests.lhs
distribution/src/Utility/: Extras.lhs  ServerTypes.lhs
distribution/src/glade/: qstack.glade
distribution/src/language-specs/: lqplassembly.lang
(+799 files in other folders)
