Name:                lqpl
Version:             0.9.2
Stability:           Experimental
Synopsis:            Compiler and Emulator for Linear-QPL
Description:         A command-line compiler, a server based compiler and a server based emulator
                     for Linear-QPL. LQPL is a functional quantum programming language that allows
                     experimenting with and visualizing the effects of quantum algorithms.
tested-with:         GHC
License:             BSD3
License-file:        LICENCE
Author:              Brett Giles, Robin Cockett
Maintainer:          brett.giles@ucalgary.ca
bug-reports:         mailto:brett.giles@ucalgary.ca
homepage:            http://pll.cpsc.ucalgary.ca/lqpl
Build-Type:          Simple
Cabal-Version:       >=1.9.2

Test-Suite spec
   type:             exitcode-stdio-1.0
   main-is:          Spec.hs
   build-depends:    aeson,array,base,bytestring,containers,directory,filepath,hspec,hspec-contrib,hspec-core,
                     HUnit,mtl,network,parsec,process,QuickCheck,random,text,time,transformers,unix
   other-modules:    Compiler.BaseTypes, Compiler.CompSupport, Compiler.CompilerServer, Compiler.CompilerSpecHelper,
                     Compiler.GenCode, Compiler.GenerationErrors, Compiler.InstructionNames, Compiler.Instructions,
                     Compiler.IrTypes, Compiler.QPLParser, Compiler.Qtypes, Compiler.SemTypes, Compiler.Semantic,
                     Compiler.SemanticErrors, Compiler.SymbolTable, Compiler.SymbolTableGlobals, Compiler.TypeUnification,
                     Compiler.UnificationErrors, Data.ClassComp, Data.ClassicalData, Data.Computation.BaseType, Data.EitherLocal, Data.InfList, Data.LazyNum, Data.Matrix, Data.Permutation, Data.Stack,
                     Data.Stream, Data.Tuples, Fixture.CompilerData, Paths_lqpl, QSM.BasicData, QSM.Components.ClassicalStack,
                     QSM.Components.ControlStack, QSM.Components.Dump, QSM.Components.Instructions,
                     QSM.Components.MemoryMap, QSM.MachineErrors, QSM.QSM, QSM.QuantumStack.QSDefinition,
                     QSM.QuantumStack.QSManipulation, QSM.QuantumStack.QSRotation,
                     QSM.QuantumStack.QSTransforms, QSM.Transformations, QServer.StackToJSON,
                     SpecHelper,
                     Utility.Extras, Utility.FileProvider, Utility.FileProvider.FileSystem, Utility.MakeJSON,
                     Utility.ServerTypes,QServer.EmulatorServerCommand, QServer.Types, Utility.MakeJSON, Utility.ServerTypes,
                     Compiler.CompilerServerConnectSpec,Compiler.CompilerServerSpec,Compiler.QPLParserSpec,Compiler.TypeUnificationSpec,
                     QServer.CodeToJSONSpec,QServer.EmulatorServerCommandSpec,QServer.StackToJSONSpec,Utility.FileProviderSpec
   hs-source-dirs:   Compiler/src,Common/src,Emulator/src,hspec
   extensions:       FlexibleInstances,TypeSynonymInstances,MultiParamTypeClasses,Rank2Types,
                     ExistentialQuantification,OverloadedStrings,ExtendedDefaultRules,FlexibleContexts,
                     CPP

Executable lqpl
   Main-is:           Compiler/Main.lhs
   Build-Depends:     containers,mtl,array,directory,filepath,base,transformers,parsec,hspec
   other-modules:     Compiler.BaseTypes, Compiler.CompSupport, Compiler.Compiler, Compiler.GenCode,
                      Compiler.GenerationErrors, Compiler.InstructionNames, Compiler.Instructions,
                      Compiler.IrTypes, Compiler.Opts, Compiler.QPLParser, Compiler.Qtypes, Compiler.SemTypes,
                      Compiler.Semantic, Compiler.SemanticErrors, Compiler.SymbolTable, Compiler.SymbolTableGlobals,
                      Compiler.TypeUnification, Compiler.UnificationErrors, Data.Stack, Data.Tuples, Paths_lqpl,
                      Utility.Extras, Utility.FileProvider, Utility.FileProvider.FileSystem
   extensions:        ExistentialQuantification
   hs-source-dirs:    Compiler/src,Common/src
   Other-modules:     Compiler.BaseTypes,Compiler.CompSupport,Compiler.Compiler,Compiler.GenCode,
                      Compiler.GenerationErrors,Compiler.InstructionNames,Compiler.Instructions,
                      Compiler.IrTypes,Compiler.Opts,Compiler.QPLParser,Compiler.Qtypes,
                      Compiler.SemTypes,Compiler.Semantic,Compiler.SemanticErrors,
                      Compiler.SymbolTable,Compiler.SymbolTableGlobals,Compiler.TypeUnification,
                      Compiler.UnificationErrors,Data.Stack,Data.Tuples,Paths_lqpl,Utility.Extras,
                      Utility.FileProvider,Utility.FileProvider.FileSystem

Executable lqpl-compiler-server
   Main-is:           Compiler/ServerMain.lhs
   Build-Depends:     containers,mtl,array,directory,filepath,base,network,transformers,parsec,hspec,aeson,bytestring,text,time
   other-modules:     Compiler.BaseTypes, Compiler.CompSupport, Compiler.CompilerServer, Compiler.GenCode,
                      Compiler.GenerationErrors, Compiler.InstructionNames, Compiler.Instructions,
                      Compiler.IrTypes, Compiler.QPLParser, Compiler.Qtypes, Compiler.SemTypes,
                      Compiler.Semantic, Compiler.SemanticErrors, Compiler.SymbolTable,
                      Compiler.SymbolTableGlobals, Compiler.TypeUnification, Compiler.UnificationErrors,
                      Data.Stack, Data.Tuples, Paths_lqpl, Utility.Extras, Utility.FileProvider,
                      Utility.MakeJSON, Utility.ServerTypes
   extensions:        ExistentialQuantification,OverloadedStrings
   hs-source-dirs:    Compiler/src,Common/src
   Other-Modules:     Compiler.BaseTypes,Compiler.CompSupport,Compiler.CompilerServer,
                      Compiler.GenCode,Compiler.GenerationErrors,Compiler.InstructionNames,
                      Compiler.Instructions,Compiler.IrTypes,Compiler.QPLParser,Compiler.Qtypes,
                      Compiler.SemTypes,Compiler.Semantic,Compiler.SemanticErrors,
                      Compiler.SymbolTable,Compiler.SymbolTableGlobals,Compiler.TypeUnification,
                      Compiler.UnificationErrors,Data.Stack,Data.Tuples,Paths_lqpl,Utility.Extras,
                      Utility.FileProvider,Utility.MakeJSON,Utility.ServerTypes

Executable lqpl-emulator
   Main-is:           QServer/QServer.lhs
   Build-Depends:     base,filepath,array,containers,network,mtl,directory,random,aeson,text,bytestring
   other-modules:     Assembler.LexMonad, Data.ClassComp, Data.ClassicalData, Data.Computation.BaseType,
                      Data.EitherLocal, Data.InfList, Data.LazyNum, Data.Matrix, Data.Permutation, Data.Stack,
                      Data.Stream, Data.Tuples, QSM.BasicData, QSM.Components.ClassicalStack,
                      QSM.Components.ControlStack, QSM.Components.Dump, QSM.Components.Instructions,
                      QSM.Components.MemoryMap, QSM.MachineErrors, QSM.QSM, QSM.QuantumStack.QSDefinition,
                      QSM.QuantumStack.QSManipulation, QSM.QuantumStack.QSRotation, QSM.QuantumStack.QSTransforms,
                      QSM.Simulate, QSM.Transformations, QServer.EmulatorServerCommand, QServer.MachineControl,
                      QServer.StackToJSON, QServer.Types, Utility.Extras, Utility.MakeJSON, Utility.ServerTypes
   hs-source-dirs:    Emulator/src,Common/src
   extensions:        FlexibleInstances,TypeSynonymInstances,MultiParamTypeClasses,Rank2Types
   Other-Modules:     Assembler.AssemLexer,Assembler.AssemParser,Assembler.LexMonad,Data.ClassComp,
                      Data.ClassicalData,Data.Computation.BaseType,Data.EitherLocal,Data.InfList,
                      Data.LazyNum,Data.Matrix,Data.Permutation,Data.Stack,Data.Stream,Data.Tuples,
                      Paths_lqpl,QSM.BasicData,QSM.Components.ClassicalStack,
                      QSM.Components.ControlStack,QSM.Components.Dump,QSM.Components.Instructions,
                      QSM.Components.MemoryMap,QSM.MachineErrors,QSM.QSM,
                      QSM.QuantumStack.QSDefinition,QSM.QuantumStack.QSManipulation,
                      QSM.QuantumStack.QSRotation,QSM.QuantumStack.QSTransforms,QSM.Simulate,
                      QSM.Transformations,QServer.EmulatorServerCommand,QServer.MachineControl,
                      QServer.StackToJSON,QServer.Types,Utility.Extras,Utility.MakeJSON,
                      Utility.ServerTypes
